# CookieCutterPython

./: BLANK_README.md  LICENSE  README.md  blank_pyproject.toml  mkdocs.yml  pyproject.toml
devel/: deploy.sh
