[project]
name = "CookieCutterPython"
version = "0.1.0"
description = "A small repo meant to be copypastad for new Python projects."
dependencies = [

]
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Brenton Candelaria", email = "brentoncandelaria@gmail.com"},
]
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "Template"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/HyPerNT/CookieCutterPython"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "CookieCutterPython"
packages = [
    {include = "example", from = "src"}
]
version = "0.1.0"
description = "A small repo meant to be copypastad for new Python projects."
authors = ["HyPerNT <brentoncandelaria@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[tool.flake8]
max-line-length = 150

[tool.interrogate]
ignore-init-module = true

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"
testpaths = [
    "tests",
]
